Continue working on arith5parser

--- a/arith5parser.ipynb
+++ b/arith5parser.ipynb
@@ -19,9 +19,12 @@
     "a^b^c is a^(b^c), not (a^b)^c (right associative)\n",
     "\n",
     "```\n",
-    "<expr> ::= <term> { (\"+\" | \"-\") <term> }\n",
+    "<expr> ::= (<term> | <nterm>) { (\"+\" | \"-\") <term> }\n",
+    "<nterm> ::= \"-\" <term>\n",
     "<term> ::= <factor> { (\"*\" | \"/\") <factor> }\n",
-    "<factor> ::= \"(\" <expr> \")\" | <atom>\n",
+    "<factor> ::= { <factor_exp> \"^\" } <factor_exp>\n",
+    "<factor_exp> ::= <factor_post> { (\"!\" | \"'\") }\n",
+    "<factor_post> ::= \"(\" <expr> \")\" | <atom>\n",
     "<atom> ::= <identifier> | <numeral>\n",
     "<identifier> ::= <letter> { <letter> | <digit> }\n",
     "<letter> ::= [a-z] \n",
@@ -33,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,13 +45,17 @@
     "    self.value = value\n",
     "    # input value is guaranteed to be a valid token\n",
     "    if value in (\"+\", \"-\"):\n",
-    "      self.token_type = 'op_type1' # precedence 1\n",
+    "      self.token_type = 'op_bin_1' # precedence 1\n",
     "    elif value in (\"*\", \"/\"):\n",
-    "      self.token_type = 'op_type2' # precedence 2\n",
+    "      self.token_type = 'op_bin_2' # precedence 2\n",
     "    elif value == \"(\":\n",
     "      self.token_type = 'lparen'\n",
     "    elif value == \")\":\n",
     "      self.token_type = 'rparen'\n",
+    "    elif value in (\"!\", \"'\"):\n",
+    "      self.token_type = 'op_postfix'\n",
+    "    elif value == \"^\":\n",
+    "      self.token_type = \"op_bin_exp\"\n",
     "    elif value.isdecimal():\n",
     "      self.token_type = 'numeral'\n",
     "    elif value.isalnum() and value[0].isalpha():\n",
@@ -62,19 +69,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+ (op_type1)\n",
-      "* (op_type2)\n",
+      "+ (op_bin_1)\n",
+      "* (op_bin_2)\n",
       "( (lparen)\n",
       ") (rparen)\n",
       "13 (numeral)\n",
-      "abc (identifier)\n"
+      "abc (identifier) a1 (identifier)\n",
+      "! (op_postfix) ' (op_postfix)\n",
+      "^ (op_bin_exp)\n"
      ]
     }
    ],
@@ -84,12 +93,14 @@
     "print(Token(\"(\"))\n",
     "print(Token(\")\"))\n",
     "print(Token(\"13\"))\n",
-    "print(Token(\"abc\"))\n"
+    "print(Token(\"abc\"), Token(\"a1\"))\n",
+    "print(Token(\"!\"), Token(\"'\"))\n",
+    "print(Token(\"^\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,12 +115,12 @@
     "  for s in li: # s is a string\n",
     "    if not s.isascii():\n",
     "      raise ValueError(f\"'{s}' is invalid (non-ASCII)\")\n",
-    "    if not (set(s).issubset(\"+-*/()\") or      # operator or parenthesis\n",
+    "    if not (set(s).issubset(\"+-*/()!'^\") or      # operator or parenthesis\n",
     "            (s.isdecimal() and s[0]!='0') or  # numeral\n",
     "            (s.isalnum() and s[0].isalpha() and s.islower())):   \n",
     "                                              # identifier\n",
     "      raise ValueError(f\"'{s}' is invalid (non-token)\")\n",
-    "    if set(s).issubset(\"+-*/()\") and len(s) > 1:\n",
+    "    if set(s).issubset(\"+-*/()!'^\") and len(s) > 1:\n",
     "      # split string of consecutive operators into individual characters\n",
     "      for c in s: # c is an operator character\n",
     "        tokens.append(Token(c))\n",
@@ -121,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,34 +148,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "first (identifier)\n",
-      "+ (op_type1)\n",
-      "second (identifier)\n",
-      "* (op_type2)\n",
+      "a (identifier)\n",
+      "/ (op_bin_2)\n",
+      "b (identifier)\n",
+      "+ (op_bin_1)\n",
+      "b1 (identifier)\n",
+      "^ (op_bin_exp)\n",
+      "b (identifier)\n",
+      "' (op_postfix)\n",
+      "* (op_bin_2)\n",
+      "c1 (identifier)\n",
+      "! (op_postfix)\n",
+      "* (op_bin_2)\n",
       "( (lparen)\n",
       "hello (identifier)\n",
-      "+ (op_type1)\n",
-      "c1 (identifier)\n",
+      "- (op_bin_1)\n",
+      "cc1 (identifier)\n",
       ") (rparen)\n",
-      "+ (op_type1)\n",
+      "+ (op_bin_1)\n",
       "a23 (identifier)\n"
      ]
     }
    ],
    "source": [
-    "testTokenizer(\"first + second* (hello + c1)+a23\")"
+    "testTokenizer(\"a/b + b1^b'*c1!* (hello - cc1)+a23\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,18 +214,19 @@
     "  def __str__(self):\n",
     "    return self.build_polish_notation()\n",
     "\n",
-    "  def build_polish_notation(self):\n",
-    "    ret_str = f\"{self.token.value}\"\n",
+    "  def build_polish_notation(self, opt=False):\n",
+    "    ret_str = (f\"{self.token.value}({self.token.token_type})\" if opt \n",
+    "      else f\"{self.token.value}\")\n",
     "    if self.children:\n",
     "      ret_str += ' '\n",
-    "    ret_str += ' '.join(child.build_polish_notation() \n",
+    "    ret_str += ' '.join(child.build_polish_notation(opt) \n",
     "                        for child in self.children)\n",
     "    return ret_str"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,14 +245,33 @@
     "    else:\n",
     "      self.current_token = None\n",
     "\n",
+    "  def check_token_type(self, token_types):\n",
+    "    token = self.current_token\n",
+    "    if token is None:\n",
+    "      return False\n",
+    "    elif(type(token_types) is not tuple): # must be a string in this case\n",
+    "        return token.token_type == token_types\n",
+    "    elif len(token_types) == 1:\n",
+    "      return token.token_type == token_types[0]\n",
+    "    elif token.token_type in token_types:\n",
+    "      return True\n",
+    "    else:\n",
+    "      return False\n",
+    "\n",
     "  def parse(self):\n",
     "    return self.expr() # expr() corresponds to the starting symbol <expr>\n",
     "\n",
     "  def expr(self):\n",
-    "    node = self.term()\n",
+    "    token = self.current_token\n",
+    "    if token.value == '-': # unary minus\n",
+    "      token.token_type = 'op_unary_prefix'\n",
+    "      self.advance()\n",
+    "      unary_node = self.term()\n",
+    "      node = Node(token, [unary_node])\n",
+    "    else:\n",
+    "      node = self.term()\n",
     "\n",
-    "    while(self.current_token is not None and  \n",
-    "          self.current_token.token_type in ('op_type1')):\n",
+    "    while self.check_token_type('op_bin_1'): # '+' or '-'\n",
     "      # If we are at '+' in \"a + b * c - ...\" then the next token is '-'\n",
     "      # because we will consume tokens by self.advance() and self.term().\n",
     "      token = self.current_token\n",
@@ -245,25 +284,43 @@
     "  def term(self):\n",
     "    node = self.factor()\n",
     "\n",
-    "    while(self.current_token is not None and \n",
-    "          self.current_token.token_type in ('op_type2')):\n",
+    "    while self.check_token_type('op_bin_2'): # '*' or '/'\n",
     "      token = self.current_token\n",
     "      self.advance()\n",
-    "      right = self.factor()\n",
-    "      node = Node(token, [node, right])\n",
+    "      right_factor = self.factor()\n",
+    "      node = Node(token, [node, right_factor])\n",
     "\n",
     "    return node\n",
     "\n",
     "  def factor(self):\n",
-    "    if(self.current_token is not None and \n",
-    "       self.current_token.token_type == 'lparen'):\n",
+    "    node = self.factor_exp()\n",
+    "\n",
+    "    if self.check_token_type('op_bin_exp'): # '^'\n",
+    "      token = self.current_token\n",
+    "      self.advance()\n",
+    "      right_factor = self.factor_exp() # recursive call for right associativity\n",
+    "      node = Node(token, [node, right_factor])\n",
+    "\n",
+    "    return node\n",
+    "  \n",
+    "  def factor_exp(self):\n",
+    "    node = self.factor_postfix()\n",
+    "\n",
+    "    while self.check_token_type('op_postfix'):\n",
+    "      token = self.current_token\n",
+    "      self.advance()\n",
+    "      node = Node(token, [node])\n",
+    "\n",
+    "    return node\n",
+    "\n",
+    "  def factor_postfix(self):\n",
+    "    if self.check_token_type('lparen'):\n",
     "      self.advance()\n",
     "      node = self.expr()\n",
-    "      if(self.current_token is not None and \n",
-    "         self.current_token.token_type == 'rparen'):\n",
+    "      if self.check_token_type('rparen'):\n",
     "        self.advance()\n",
     "      else:\n",
-    "        raise SyntaxError(\"Expected ')' after expression, in factor()\")\n",
+    "        raise SyntaxError(\"Expected ')' after expression, in factor_postfix()\")\n",
     "    else:\n",
     "      node = self.atom()\n",
     "\n",
@@ -272,7 +329,7 @@
     "  def atom(self):\n",
     "    if self.current_token is not None:\n",
     "      token = self.current_token\n",
-    "      if token.token_type in ('numeral', 'identifier'):\n",
+    "      if self.check_token_type(('numeral', 'identifier')):\n",
     "        self.advance()\n",
     "        return Node(token)\n",
     "      else:\n",
@@ -286,44 +343,76 @@
     "  ast = parser.parse() # ast = Abstract Syntax Tree\n",
     "  return ast\n",
     "\n",
-    "def testParser(input_text):\n",
+    "def testParser(input_text, showOperType=False):\n",
     "  try:\n",
-    "    tree = parse_input(input_text)\n",
+    "    ast = parse_input(input_text)\n",
     "  except ValueError as e:\n",
     "    print(f\"ValueError: {e}\")\n",
     "  except SyntaxError as e:\n",
     "    print(f\"SyntaxError: {e}\")\n",
     "  else:\n",
-    "    print(tree)"
+    "    print(ast.build_polish_notation(showOperType))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+ + a * b - c d ab\n",
-      "* + / a b 102 - const * 2 var\n",
-      "ValueError: 'UpperCaseVar' is invalid (non-token)\n",
-      "ValueError: 'UpperCaseVar' is invalid (non-token)\n",
-      "SyntaxError: Expected numeral or identifier, in atom(): + (op_type1)\n",
-      "SyntaxError: Unexpected end of input, in atom()\n",
-      "SyntaxError: Expected numeral or identifier, in atom(): - (op_type1)\n"
+      "+ - * a b2 c\n",
+      "SyntaxError: Expected numeral or identifier, in atom(): - (op_bin_1)\n",
+      "-(op_bin_1) a(identifier) -(op_unary_prefix) b(identifier)\n",
+      "+ + first * second + hello c1 a23\n",
+      "SyntaxError: Expected numeral or identifier, in atom(): + (op_bin_1)\n",
+      "SyntaxError: Unexpected end of input, in atom()\n"
      ]
     }
    ],
    "source": [
-    "testParser(\"a + b * (c - d) + ab\")\n",
-    "testParser(\"(a/b + 102)*(const - 2*var)\")\n",
-    "testParser(\"c - a + UpperCaseVar\")\n",
-    "testParser(\"c1 - a + UpperCaseVar\")\n",
+    "testParser(\"-a*b2 + c\")\n",
+    "testParser(\"a + -b\")\n",
+    "testParser(\"a - (-b)\", showOperType=True)\n",
+    "testParser(\"first + second* (hello + c1)+a23\")\n",
     "testParser(\"a + + b\")\n",
-    "testParser(\"a + b *\")\n",
-    "testParser(\"-a + b *\")"
+    "testParser(\"a + b *\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * a b ' ! ! c\n"
+     ]
+    }
+   ],
+   "source": [
+    "testParser(\"(a)*b*c!!'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^ a b\n"
+     ]
+    }
+   ],
+   "source": [
+    "testParser(\"a^b^c\")"
    ]
   }
  ],
@@ -343,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
