Bug fix for newly introduced operators

--- a/arith5parser.ipynb
+++ b/arith5parser.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "```\n",
     "<expr> ::= (<term> | <nterm>) { (\"+\" | \"-\") <term> }\n",
-    "<nterm> ::= \"-\" <term>\n",
+    "<nterm> ::= \"-\" { \"-\" } <term>\n",
     "<term> ::= <factor> { (\"*\" | \"/\") <factor> }\n",
     "<factor> ::= { <factor_exp> \"^\" } <factor_exp>\n",
     "<factor_exp> ::= <factor_post> { (\"!\" | \"'\") }\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,6 +246,7 @@
     "      self.current_token = None\n",
     "\n",
     "  def check_token_type(self, token_types):\n",
+    "    # token_types can be a string or a tuple of strings\n",
     "    token = self.current_token\n",
     "    if token is None:\n",
     "      return False\n",
@@ -262,13 +263,10 @@
     "    return self.expr() # expr() corresponds to the starting symbol <expr>\n",
     "\n",
     "  def expr(self):\n",
-    "    token = self.current_token\n",
-    "    if token.value == '-': # unary minus\n",
-    "      token.token_type = 'op_unary_prefix'\n",
-    "      self.advance()\n",
-    "      unary_node = self.term()\n",
-    "      node = Node(token, [unary_node])\n",
-    "    else:\n",
+    "    if(self.current_token is not None and  \n",
+    "      self.current_token.value == '-'): # unary minus\n",
+    "      node = self.nterm()\n",
+    "    else: # not a negative term\n",
     "      node = self.term()\n",
     "\n",
     "    while self.check_token_type('op_bin_1'): # '+' or '-'\n",
@@ -280,7 +278,22 @@
     "      node = Node(token, [node, right_term]) # left associative\n",
     "\n",
     "    return node\n",
+    "  \n",
+    "  def nterm(self):\n",
+    "    token = self.current_token \n",
+    "    # For the first visit only, token.value == '-' is  guaranteed\n",
+    "    #   because we have checked it in self.expr().\n",
+    "    # But for subsequent recursive calls it can be otherwise.\n",
+    "    if(token is None or token.value != '-'):\n",
+    "      node = self.term()\n",
+    "    else:\n",
+    "      token.token_type = 'op_unary_prefix'\n",
+    "      self.advance()\n",
+    "      unary_node = self.nterm() # recursive call\n",
+    "      node = Node(token, [unary_node])\n",
     "\n",
+    "    return node\n",
+    "  \n",
     "  def term(self):\n",
     "    node = self.factor()\n",
     "\n",
@@ -298,7 +311,7 @@
     "    if self.check_token_type('op_bin_exp'): # '^'\n",
     "      token = self.current_token\n",
     "      self.advance()\n",
-    "      right_factor = self.factor_exp() # recursive call for right associativity\n",
+    "      right_factor = self.factor() # recursive call for right associativity\n",
     "      node = Node(token, [node, right_factor])\n",
     "\n",
     "    return node\n",
@@ -320,7 +333,7 @@
     "      if self.check_token_type('rparen'):\n",
     "        self.advance()\n",
     "      else:\n",
-    "        raise SyntaxError(\"Expected ')' after expression, in factor_postfix()\")\n",
+    "        raise SyntaxError(\"Expected ')' after expression at {self.index}, in factor_postfix()\")\n",
     "    else:\n",
     "      node = self.atom()\n",
     "\n",
@@ -333,7 +346,7 @@
     "        self.advance()\n",
     "        return Node(token)\n",
     "      else:\n",
-    "        raise SyntaxError(f\"Expected numeral or identifier, in atom(): {token}\")\n",
+    "        raise SyntaxError(f\"Expected numeral or identifier at {self.index}, in atom(): {token}\")\n",
     "    else:\n",
     "      raise SyntaxError(\"Unexpected end of input, in atom()\")\n",
     "      \n",
@@ -356,7 +369,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- - - a - * b c\n"
+     ]
+    }
+   ],
+   "source": [
+    "testParser(\"--a - (-b * c)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -364,55 +394,61 @@
      "output_type": "stream",
      "text": [
       "+ - * a b2 c\n",
-      "SyntaxError: Expected numeral or identifier, in atom(): - (op_bin_1)\n",
+      "+ - * a - - b2 c\n",
+      "SyntaxError: Expected numeral or identifier at 2, in atom(): - (op_bin_1)\n",
       "-(op_bin_1) a(identifier) -(op_unary_prefix) b(identifier)\n",
-      "+ + first * second + hello c1 a23\n",
-      "SyntaxError: Expected numeral or identifier, in atom(): + (op_bin_1)\n",
+      "+ + first * second + hello - c1 a23\n",
+      "SyntaxError: Expected numeral or identifier at 2, in atom(): + (op_bin_1)\n",
       "SyntaxError: Unexpected end of input, in atom()\n"
      ]
     }
    ],
    "source": [
     "testParser(\"-a*b2 + c\")\n",
+    "testParser(\"-a*(--b2) + c\")\n",
     "testParser(\"a + -b\")\n",
     "testParser(\"a - (-b)\", showOperType=True)\n",
-    "testParser(\"first + second* (hello + c1)+a23\")\n",
+    "testParser(\"first + second* (hello + (-c1))+a23\")\n",
     "testParser(\"a + + b\")\n",
     "testParser(\"a + b *\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* * a b ' ! ! c\n"
+      "* * + - ! a b b ' ! ! c\n"
      ]
     }
    ],
    "source": [
-    "testParser(\"(a)*b*c!!'\")"
+    "testParser(\"(-a!+b)*b*c!!'\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "^ a b\n"
+      "^ a ^ b c\n",
+      "^ a ^ - - - ! ' b c\n",
+      "^ - ^ a ! b c\n"
      ]
     }
    ],
    "source": [
-    "testParser(\"a^b^c\")"
+    "testParser(\"a^b^c\")\n",
+    "testParser(\"(a)^(---b'!)^c\")\n",
+    "testParser(\"(-a^b!)^c\")"
    ]
   }
  ],
